<resources>
    <plurals name="producers">
        <item quantity="one">Producer: %s</item>
        <item quantity="many">Producers:%s</item>
    </plurals>
    <string name="app_name">StarWars</string>
    <string name="movie_title">Movie Title</string>
    <string name="title"> %s </string>
    <string name="episode_id">Episode Number %s</string>
    <string name="opening_crawl">Opening Crawl: %s</string>
    <string name="director">Director: %s</string>
    <string name="release_date">Release Date: %s</string>
    <string name="species">SPECIES</string>
    <string name="vehicles">VEHICLES</string>
    <string name="planets">PLANETS</string>
    <string name="characters">CHARACTERS</string>
    <string name="starships">STARSHIPS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="films">FILMS</string>
    <string name="todo">TODO</string>


</resources>