<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.starwars.ui.main.FilmInfoFragment">
    <data>
        <variable
            name="viewModel"
            type="com.example.starwars.ui.main.MainViewModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/film_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:fontFamily="@font/titan_one"
            android:text="@{viewModel.currentFilm.toString()}"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/StarWarsYellow"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/characters_text"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="STARWARS MOVIE INFO" />

        <TextView
            android:id="@+id/characters_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/film_info"
            app:layout_constraintBottom_toTopOf="@id/film_characters_view"
            android:background="@color/black"
            android:fontFamily="@font/titan_one"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/StarWarsYellow"
            android:textStyle="bold"
            android:text="@string/characters"  />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/film_characters_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@color/black"
            android:clipToPadding="false"
            android:isScrollContainer="false"
            android:padding="16dp"
            android:scrollbars="none"
            app:filmCharData="@{viewModel.currentPeopleNames}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/characters_text"
            app:layout_constraintBottom_toTopOf="@id/planets_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:spanCount="3"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/planets_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/film_characters_view"
            app:layout_constraintBottom_toTopOf="@id/film_planets_view"
            android:background="@color/black"
            android:fontFamily="@font/titan_one"
            android:textAlignment="center"
            android:textColor="@color/StarWarsYellow"
            android:textStyle="bold"
            android:text="@string/planets"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/film_planets_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:scrollbars="none"
                            android:background="#000000"
                            android:clipToPadding="false"
                            android:padding="16dp"
                            app:spanCount="3"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:layout_constraintTop_toBottomOf="@id/planets_text"
                            app:layout_constraintBottom_toTopOf="@id/starships_text"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:filmPlanetData="@{viewModel.currentPlanetNames}"
                            >

                        </androidx.recyclerview.widget.RecyclerView>


        <TextView
            android:id="@+id/starships_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/film_planets_view"
            app:layout_constraintBottom_toTopOf="@id/film_starships_view"
            android:text="@string/starships"
            android:background="@color/black"
            android:fontFamily="@font/titan_one"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/StarWarsYellow"
            android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/film_starships_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:scrollbars="none"
                        android:clipToPadding="false"
                        android:background="@color/black"
                        android:padding="16dp"
                        app:spanCount="3"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintTop_toBottomOf="@id/starships_text"
                        app:layout_constraintBottom_toTopOf="@id/vehicles_text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:filmStarshipData="@{viewModel.currentStarshipNames}"
                        >

                    </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/vehicles_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/film_starships_view"
            app:layout_constraintBottom_toTopOf="@id/film_vehicles_view"
            android:text="@string/vehicles"
            android:background="@color/black"
            android:fontFamily="@font/titan_one"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/StarWarsYellow"
            android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/film_vehicles_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:scrollbars="none"
                    android:clipToPadding="false"
                    android:background="@color/black"
                    android:padding="16dp"
                    app:spanCount="3"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toTopOf="@id/species_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vehicles_text"
                    app:filmVehicleData="@{viewModel.currentVehicleNames}"
                    >

                </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/species_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/film_vehicles_view"
            app:layout_constraintBottom_toTopOf="@id/film_species_view"
            android:text="@string/species"
            android:background="@color/black"
            android:fontFamily="@font/titan_one"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/StarWarsYellow"
            android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/film_species_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:scrollbars="none"
                    android:clipToPadding="false"
                    android:background="@color/black"
                    android:padding="16dp"
                    app:spanCount="3"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/species_text"
                    app:filmSpeciesData="@{viewModel.currentSpeciesNames}"
                    >

                </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
